--- a/compo-frontend/components/Banner/Banner.module.css
+++ b/compo-frontend/components/Banner/Banner.module.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Prompt:wght@700&display=swap');
+
 .Header{
     width: 1920px;
     height: 813px;
@@ -16,6 +18,8 @@
     height: 527px;
     margin-left: 12vw;
     margin-top: 136px;
+    font-family: 'Poppins';
+    font-style: normal;
 }
 .textHeader
 {
@@ -170,15 +174,11 @@ flex-grow: 0;
     width: 531px;
 height: 60px;
 margin-top:75px;
-/* type/smallest */
 font-family: 'Poppins';
 font-style: normal;
 font-weight: 400;
 font-size: 16px;
 line-height: 30px;
-/* or 188% */
-
-/* color/black */
 color: #000000;
 
 
