--- a/compo-frontend/styles/globals.css
+++ b/compo-frontend/styles/globals.css
@@ -115,32 +115,22 @@ h6 {
   height: inherit !important;
 }
 .uni-logo > span {
-  width: 179px !important;
-  height: 179px !important;
-  top: -40px !important;
-  left: 35px !important;
+  width: 170px !important;
+  height: 170px !important;
+  top: -78px !important;
+  left: 55px !important;
 }
 .carousel-image > span {
   margin-right: 25px !important;
 }
- @media only screen and (max-width: 900px) {
- .uni-logo > span {
-  width:150px !important;
-  left: 20px !important;
- 
+@media only screen and (max-width: 1200px) {
+  .uni-logo > span {
+    width: 150px !important;
+    height: 150px !important;
+    left: 25px !important;
+    top: -50px !important;
+  }
 }
+.MuiPopover-paper {
+  max-height: 25% !important;
 }
-
-/*
-@media only screen and (max-width: 700px) {
- .uni-logo > span {
-  width:130px !important;
- 
-}
-}
-@media only screen and (max-width: 600px) {
- .uni-logo > span {
-  width:0px !important;
- 
-}
-} */
