--- a/accounts/templates/accounts/reset_password.html
+++ b/accounts/templates/accounts/reset_password.html
@@ -1,5 +1,5 @@
 {% autoescape off %}
 Hey {{ user.username }},
-Please click on the link bellow to activate your account.
+Please click on the link bellow to reset your password.
 {{ protocol }}://{{ domain }}?token={{verification_token}}
 {% endautoescape %}
