--- a/accounts/templates/accounts/activation.html
+++ b/accounts/templates/accounts/activation.html
@@ -1,5 +1,5 @@
 {% autoescape off %}
 Hey {{ user.username }},
 Please click on the link bellow to activate your account.
-{{ protocol }}://{{ domain }}?token={{verification_token}}
+{{ domain }}?token={{verification_token}}
 {% endautoescape %}
