--- a/compo-frontend/styles/globals.css
+++ b/compo-frontend/styles/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 body {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   @apply bg-colorWhite text-colorStone;
 }
 
@@ -159,4 +159,8 @@ h6 {
 
 .onboarding3-cover {
   background: url("../assets/reg-step-3.png") no-repeat center center fixed;
+}
+
+.major > span {
+  height: 100% !important;
 }
