--- a/compo-frontend/styles/globals.css
+++ b/compo-frontend/styles/globals.css
@@ -121,7 +121,6 @@ h6 {
 
 ::-webkit-scrollbar-track {
   background: #f1f2f6;
-  
 }
 
 /* Handle */
@@ -130,3 +129,19 @@ h6 {
   background: #888;
   border-radius: 5px;
 }
+
+.xyz {
+  width: 100%;
+  height: 225px;
+  background-image: url("../assets/art-ss-1.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.abc {
+  width: 100%;
+  height: 225px;
+  background-image: url("../assets/art-ss-2.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
